fix: Add missing tn Go module and resolve Docker build issues
- Initialize Go module for tn component with Kubernetes dependencies
- Update tn-agent and tn-manager Dockerfiles to use Go 1.24 for compatibility
- Fix Alpine package issue by removing non-existent 'tc' package (included in iproute2)
- Fix RBAC validation in CI workflow to check for separate apiGroups and verbs fields
- Add security improvements and timeout configurations

Resolves:
- Docker build error: "/tn/go.mod": not found
- Docker build error: "/tn/go.sum": not found
- Alpine package error: "tc (no such package)"
- CI RBAC validation failure for standard YAML formatting

All TN (Transport Network) components can now build successfully.

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -481,11 +481,12 @@ jobs:
 
     - name: Validate RBAC policies
       run: |
-        # Basic RBAC validation
-        if ! grep -q "apiGroups.*verbs" deploy/k8s/base/rbac.yaml; then
-          echo "::error::RBAC policies appear incomplete"
+        # Basic RBAC validation - check for presence of both apiGroups and verbs
+        if ! grep -q "apiGroups" deploy/k8s/base/rbac.yaml || ! grep -q "verbs" deploy/k8s/base/rbac.yaml; then
+          echo "::error::RBAC policies appear incomplete - missing apiGroups or verbs"
           exit 1
         fi
+        echo "RBAC validation passed - found both apiGroups and verbs"
 
     - name: Check Dockerfile security practices
       run: |
