--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -126,6 +126,10 @@ jobs:
         with:
           go-version: '1.21'
           cache: true
+          cache-dependency-path: |
+            go.sum
+            */go.sum
+            deploy/docker/*/go.sum
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -149,25 +153,46 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
+      - name: Validate component directory
+        run: |
+          # Check if component directory exists, if not look in deploy/docker/
+          if [ ! -d "${{ matrix.component }}" ]; then
+            if [ -d "deploy/docker/${{ matrix.component }}" ]; then
+              echo "Component found in deploy/docker/${{ matrix.component }}"
+              COMPONENT_PATH="deploy/docker/${{ matrix.component }}"
+            else
+              echo "ERROR: Component directory ${{ matrix.component }} not found!"
+              exit 1
+            fi
+          else
+            COMPONENT_PATH="${{ matrix.component }}"
+          fi
+          echo "COMPONENT_PATH=$COMPONENT_PATH" >> $GITHUB_ENV
+
       - name: Run unit tests
         run: |
-          cd ${{ matrix.component }}
-          go mod download
-          go test -v -race -coverprofile=coverage.out ./...
-          go tool cover -html=coverage.out -o coverage.html
+          cd $COMPONENT_PATH
+          if [ -f go.mod ]; then
+            go mod download
+            go test -v -race -coverprofile=coverage.out ./...
+            go tool cover -html=coverage.out -o coverage.html
+          else
+            echo "No go.mod found, skipping tests for ${{ matrix.component }}"
+          fi
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
+        if: env.COMPONENT_PATH != ''
         with:
-          file: ${{ matrix.component }}/coverage.out
+          file: ${{ env.COMPONENT_PATH }}/coverage.out
           flags: ${{ matrix.component }}
           name: ${{ matrix.component }}-coverage
 
       - name: Build and push container image
         uses: docker/build-push-action@v5
         with:
-          context: ${{ matrix.component }}
-          file: ${{ matrix.component }}/Dockerfile
+          context: ${{ env.COMPONENT_PATH }}
+          file: ${{ env.COMPONENT_PATH }}/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
