fix: Add missing orchestrator Go module files and update Dockerfile
- Create orchestrator/go.mod with required dependencies
- Generate orchestrator/go.sum with module checksums
- Update orchestrator Dockerfile to copy pkg/security dependency
- Resolves Docker build failures due to missing go.mod/go.sum files

This enables the orchestrator Docker build to complete successfully
by ensuring all required Go module files are present during the
Docker build process.

--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -16,6 +16,9 @@ WORKDIR /workspace
 COPY orchestrator/go.mod go.mod
 COPY orchestrator/go.sum go.sum
 
+# Copy pkg/security dependency (required by orchestrator)
+COPY pkg/security/ ../pkg/security/
+
 # Download dependencies
 RUN go mod download
 
