fix: Resolve CI/CD workflow failures and component build issues
* Fix component directory validation in GitHub Actions workflow
  - Add proper handling for tn-agent and tn-manager components
  - Both components use the main tn/ module with shared dependencies
  - Update Docker build file paths for tn components

* Update Dockerfiles for tn-agent and tn-manager
  - Restore original build structure using tn/ module
  - Fix pkg/security dependency path resolution
  - Use cmd/agent/main.go and cmd/manager/main.go build targets

* Address identified CI/CD failures:
  - Component directory resolution issue resolved
  - Go module dependency path issues fixed
  - Docker build context and file path corrections

Resolves component discovery and build failures in production deployment pipeline.

--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -165,10 +165,10 @@ jobs:
           elif [ -d "deploy/docker/${{ matrix.component }}" ]; then
             COMPONENT_PATH="deploy/docker/${{ matrix.component }}"
           # Check for tn components in tn/ subdirectory
-          elif [ "${{ matrix.component }}" = "tn-agent" ] && [ -d "tn/agent" ]; then
-            COMPONENT_PATH="tn/agent"
-          elif [ "${{ matrix.component }}" = "tn-manager" ] && [ -d "tn/manager" ]; then
-            COMPONENT_PATH="tn/manager"
+          elif [ "${{ matrix.component }}" = "tn-agent" ] && [ -d "tn" ]; then
+            COMPONENT_PATH="tn"
+          elif [ "${{ matrix.component }}" = "tn-manager" ] && [ -d "tn" ]; then
+            COMPONENT_PATH="tn"
           else
             echo "ERROR: Component directory ${{ matrix.component }} not found!"
             exit 1
