--- a/deploy/docker/tn-manager/Dockerfile
+++ b/deploy/docker/tn-manager/Dockerfile
@@ -35,8 +35,9 @@ COPY tn/go.sum go.sum
 # Download dependencies
 RUN go mod download
 
-# Copy source code
+# Copy source code and pkg/security
 COPY tn/ .
+COPY pkg/security/ ../pkg/security/
 
 # Build the binary with security flags
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
