fix: Correct Dockerfile syntax error in vnf-operator healthcheck
- Fix multi-line string syntax in Dockerfile using heredoc instead of echo
- This resolves the 'unknown instruction: import' error in GitHub Actions

--- a/deploy/docker/o2-client/Dockerfile
+++ b/deploy/docker/o2-client/Dockerfile
@@ -48,7 +48,7 @@ RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
     -ldflags='-w -s -extldflags "-static"' \
     -a -installsuffix cgo \
-    -o o2-client ./cmd/main.go
+    -o o2-client ./o2-client/cmd/main.go
 
 # Stage 2: Runtime
 FROM alpine:3.20
