fix: Disable Go workspace mode in CI for individual module tests
- Add GOWORK=off environment variable to all go test commands
- Add GOWORK=off to go mod download commands
- Fixes 'directory prefix . does not contain modules listed in go.work' errors
- Fixes 'main module does not contain package' errors for o2-client

This ensures individual modules are tested in isolation without workspace interference

--- a/.github/workflows/ci-quickfix.yml
+++ b/.github/workflows/ci-quickfix.yml
@@ -51,7 +51,7 @@ jobs:
           if [ -f "$dir/go.mod" ]; then
             echo "Testing $dir..."
             cd "$dir"
-            go test ./... -v -short || echo "Tests need improvement in $dir"
+            GOWORK=off go test ./... -v -short || echo "Tests need improvement in $dir"
             cd -
           fi
         done
