fix: Add missing RUN instruction in vnf-operator Dockerfile
The Dockerfile had a CGO_ENABLED=0 command on line 71 without the RUN instruction,
causing a Docker parse error. This was breaking the CI build process.

- Added RUN instruction before CGO_ENABLED=0 command for healthcheck binary build
- Verified all other Dockerfiles don't have similar issues
- Fixes CI/CD workflow failure

--- a/deploy/docker/vnf-operator/Dockerfile
+++ b/deploy/docker/vnf-operator/Dockerfile
@@ -68,7 +68,7 @@ func main() {
     fmt.Println("Health check passed")
 }
 EOF
-    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
         -ldflags='-w -s -extldflags "-static"' \
         -a -installsuffix cgo \
         -o healthcheck healthcheck.go
